--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,7 +115,7 @@ jobs:
         working-directory: code
         run: lein install
 
-      - name: Unpack
+      - name: Unpack jar artifact
         run: |
           mkdir -p container/target/dependency/ui
           unzip code/target/*.jar -d container/target/dependency/ui
@@ -130,12 +130,12 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          tags: docker.io/nuvla/ui:$PROJECT_VERSION
           file: container/Dockerfile
           build-args: |
             GIT_BRANCH=${{ github.head_ref || github.ref_name }}
             GIT_BUILD_TIME=$(date --utc +%FT%T.%3NZ)
             GIT_COMMIT_ID=${{ github.sha }}
+            PACKAGE_TAG=${{ docker.io/nuvla/ui:$PROJECT_VERSION }}
             #PACKAGE_TAG=${{ needs.trigger-release.outputs.tag_name }}
             GITHUB_RUN_NUMBER=${{ github.run_number }}
             GITHUB_RUN_ID=${{ github.run_id }}
