--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,7 +135,7 @@ jobs:
             GIT_BRANCH=${{ github.head_ref || github.ref_name }}
             GIT_BUILD_TIME=$(date --utc +%FT%T.%3NZ)
             GIT_COMMIT_ID=${{ github.sha }}
-            PACKAGE_TAG=${{ docker.io/nuvla/ui:$PROJECT_VERSION }}
+            PACKAGE_TAG=docker.io/nuvla/ui:$PROJECT_VERSION
             #PACKAGE_TAG=${{ needs.trigger-release.outputs.tag_name }}
             GITHUB_RUN_NUMBER=${{ github.run_number }}
             GITHUB_RUN_ID=${{ github.run_id }}
