--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,7 +141,7 @@ jobs:
             GITHUB_RUN_ID=${{ github.run_id }}
             PROJECT_URL=${{ github.server_url }}/${{ github.repository }}
             PACKAGE_NAME=${{ env.PACKAGE_NAME }}
-          push: false
+          push: true
 # PACKAGE_TAG=${{ needs.trigger-release.outputs.tag_name }}
 
   notify:
