--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,11 +121,11 @@ jobs:
           mkdir -p container/target/dependency/ui
           unzip code/target/*.jar -d container/target/dependency/ui
 
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.SIXSQ_DOCKER_USERNAME }}
-#          password: ${{ secrets.SIXSQ_DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.SIXSQ_DOCKER_USERNAME }}
+          password: ${{ secrets.SIXSQ_DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
