--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,7 +143,7 @@ jobs:
             PACKAGE_NAME=alesixsq/nuvla/ui
           push: true
           tags: >
-            alesixsq/nuvla/ui:${{ env.PROJECT_VERSION }}
+            alesixsq/nuvla-ui:${{ env.PROJECT_VERSION }}
 # PACKAGE_TAG=${{ needs.trigger-release.outputs.tag_name }}
 
   notify:
